overflowing fix correct

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -9,6 +9,7 @@
 }
 
 .hero-text {
+  width: 100%;
   overflow: hidden;
 }
 
